Bug 889136: Disable MSVC warning C4200 ("nonstandard extension used") for DataChannel.cpp's #include of a third-party header. r=jesup